fixing the capitalization errors

--- a/habitat.html
+++ b/habitat.html
@@ -18,7 +18,7 @@
             <a href="index.html" class="logo">HEY SUGAR,</a>
             <nav>
                 <ul class="primary-nav">
-                    <li class="image-nav"><a href="image.html">Image</a></li>
+                    <li class="image-nav"><a href="Image.html">Image</a></li>
                     <li class="habitat-nav"><a href="habitat.html">Habitiat</a></li>
                     <li class="character-nav"><a href="character.html">Character</a></li>
                 </ul>
@@ -28,7 +28,7 @@
         <main>
 
             <div class="scroll-image">
-             <img src="images/coverpage.jpg">
+             <img src="Images/coverpage.jpg">
             </div>
             <div class="title">HEY SUGAR,</div>
             <div class="subtitle">
