--- a/character.html
+++ b/character.html
@@ -18,8 +18,8 @@
             <a href="index.html" class="logo">HEY SUGAR,</a>
             <nav>
                 <ul class="primary-nav">
-                    <li class="image-nav"><a href="image.html">Image</a></li>
-                    <li class="habitat-nav"><a href="habitat.html">Habitiat</a></li>
+                    <li class="image-nav"><a href="Image.html">Image</a></li>
+                    <li class="habitat-nav"><a href="habitat.html">Habitat</a></li>
                     <li class="character-nav"><a href="character.html">Character</a></li>
                 </ul>
             </nav>
