--- a/habitat.html
+++ b/habitat.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul class="primary-nav">
                     <li class="image-nav"><a href="Image.html">Image</a></li>
-                    <li class="habitat-nav"><a href="habitat.html">Habitiat</a></li>
+                    <li class="habitat-nav"><a href="habitat.html">Habitat</a></li>
                     <li class="character-nav"><a href="character.html">Character</a></li>
                 </ul>
             </nav>
